[package]
name = "line-openclaw-bridge"
version = "0.1.0"
edition = "2021"
description = "A Rust bridge service connecting LINE Bot to local OpenClaw AI assistant"
authors = ["Kway Dev Team"]

[dependencies]
# Web framework
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Security (HMAC signature verification)
hmac = "0.12"
sha2 = "0.10"
base64 = "0.21"
hex = "0.4"

# Environment & logging
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async utilities
futures = "0.3"
